--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <meta charset="utf-8">
   <link rel="icon" href="https://cdn2.iconfinder.com/data/icons/ios7-inspired-mac-icon-set/512/Calculator_512.png">
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+	
 </head>
  
-<body>
- <p id="titleName">Simple Calculator</p>
+<body style="background-color: lightblue;">
+  <div class="titleName">
+    <p>Simple Calculator</p>
+  </div>
 <table class="calculator" >
   <tr>
     <td colspan="3"> <input class="display-box" type="text" id="result" disabled /> </td>
